--- a/src/.devcontainer/devcontainer.json
+++ b/src/.devcontainer/devcontainer.json
@@ -11,9 +11,7 @@
       "userGid": "1000",
       "upgradePackages": "true"
     },
-    "ghcr.io/devcontainers/features/git:1": {
-      "version": "latest",
-      "ppa": "false"
-    }
+    "ghcr.io/devcontainers/features/git:1": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {}
   }
 }
