--- a/.github/workflows/image-build-and-push.yml
+++ b/.github/workflows/image-build-and-push.yml
@@ -22,6 +22,6 @@ jobs:
         uses: devcontainers/ci@v0.3
         with:
           subFolder: src
-          imageName: ghcr.io/{{ github.repository }}
-          cacheFrom: ghcr.io/{{ github.repository }}
+          imageName: ghcr.io/${{ github.repository }}
+          cacheFrom: ghcr.io/${{ github.repository }}
           push: always
