--- a/src/.devcontainer/Dockerfile
+++ b/src/.devcontainer/Dockerfile
@@ -2,7 +2,8 @@ ARG VARIANT=3.2-bookworm
 FROM ruby:${VARIANT}
 
 # Install dependencies
-RUN apt-get update -qq && apt-get install -y build-essential libvips gnupg2 curl git
+RUN export DEBIAN_FRONTEND=noninteractive && apt-get update -qq \
+    && apt-get install -y build-essential libvips gnupg2 curl git
 
 # Ensure node.js 18 is available for apt-get
 ARG NODE_MAJOR=18
@@ -21,6 +22,3 @@ RUN gem install rails
 
 # Ensure binding is always 0.0.0.0, even in development, to access server from outside container
 ENV BINDING="0.0.0.0"
-
-# Overwrite ruby image's entrypoint to provide open cli
-ENTRYPOINT [""]
