--- a/src/.devcontainer/devcontainer.json
+++ b/src/.devcontainer/devcontainer.json
@@ -13,5 +13,6 @@
     },
     "ghcr.io/devcontainers/features/git:1": {},
     "ghcr.io/devcontainers/features/github-cli:1": {}
-  }
+  },
+  "remoteUser": "vscode"
 }
